<resources>
    <string name="app_name">challenge-chapther-five</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="release">Release</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="popularity">Popularity</string>
    <string name="popular">Popular</string>
    <string name="overview">Overview</string>
    <string name="description">Description</string>
    <string name="get_rating">%s/10 IMDb</string>
    <string name="get_duration">%s Minutes</string>
    <string name="cast_name">Cast Name</string>
    <string name="cast">Cast</string>
    <string name="poster">Poster</string>
    <string name="movie_list">Movie List</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="duration">Duration</string>
    <string name="language">Language</string>
    <string name="release_date">Release Date</string>
    <string name="make_sure_you_have_internet_connection">Make sure you have internet connection</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="welcome_username">Welcome, Username</string>
    <string name="profile">Profile</string>
    <string name="register">Register</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
</resources>