<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarId"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:elevation="2dp"
            android:theme="@style/ToolbarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="?attr/homeAsUpIndicator" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title_text_view" />

        <ImageView
            android:id="@+id/poster_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/content_header_background"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/rating_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawablePadding="4dp"
            android:paddingHorizontal="16dp"
            android:paddingBottom="8dp"
            android:text="@string/rating"
            app:drawableStartCompat="@drawable/ic_baseline_star_24"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="16dp"
            android:paddingBottom="4dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/rating_text_view" />

        <TextView
            android:id="@+id/overview_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="16dp"
            android:paddingBottom="16dp"
            android:text="@string/overview"
            app:layout_constraintTop_toBottomOf="@id/description_text_view" />

        <TextView
            android:id="@+id/cast_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="16dp"
            android:paddingBottom="8dp"
            android:text="@string/cast"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/overview_text_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cast_recyler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:paddingHorizontal="11dp"
            app:layout_constraintTop_toBottomOf="@+id/cast_text_view"
            tools:listitem="@layout/cast_item_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>